infra/k8s/overlays/prod/ingresses/campaign.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campaign
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - app.familiar.systems
      secretName: preview-wildcard-tls
  rules:
    - host: app.familiar.systems
      http:
        paths:
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: campaign
                port:
                  number: 3000
          - path: /campaign
            pathType: Prefix
            backend:
              service:
                name: campaign
                port:
                  number: 3000
