infra/k8s/overlays/prod/ingresses/platform.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-api-prefix@kubernetescrd
spec:
  tls:
    - hosts:
        - app.familiar.systems
      secretName: preview-wildcard-tls
  rules:
    - host: app.familiar.systems
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: platform
                port:
                  number: 3000
